# SALMON

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  LICENSE.THIRD-PARTY  Makefile  Makefile.ARTED  Makefile.GCEED  Makefile.SALMON  Makefile.SALMON.KNL  README.md  configure.py  patch2.diff  update_overlap.f90
ARTED/: CMakeLists.txt  README.md  configure.py  main.f90
ARTED/FDTD/: CMakeLists.txt  FDTD.f90  beam.f90
ARTED/GS/: CG.f90  CMakeLists.txt  Density_Update.f90  Fermi_Dirac_distribution.f90  Gram_Schmidt.f90  Occupation_Redistribution.f90  diag.f90  io_gs_wfn_k.f90  sp_energy.f90  write_GS_data.f90
ARTED/RT/: CMakeLists.txt  Fourier_tr.f90  current.f90  dt_evolve.f90  dt_evolve_hpsi.f90  hamiltonian.f90  hpsi_RT.f90  init_Ac.f90  k_shift_wf.f90
ARTED/cmake/: setup.cmake  workaround.cmake
ARTED/common/: CMakeLists.txt  Exc_Cor.f90  Hartree.f90  Ylm_dYlm.f90  density_plot.f90  hpsi.f90  hpsi_stencil.f90  ion_force.f90  preprocessor.f90  psi_rho.f90  reentrance.f90  restart.f90  total_energy.f90
ARTED/control/: CMakeLists.txt  control_ms.f90  control_sc.f90  ground_state.f90  initialization.f90  inputfile.f90
ARTED/data/: arted2salmon.py  convert_ms.py  convert_sc.py  input_ms.nml  input_ms.nml2  input_ms_Si.cpu.nml  input_ms_Si.cpu.nml2  input_ms_Si.inp  input_ms_Si.nml  input_ms_Si.nml2  input_ms_Si.old  input_ms_Si.sym.nml  input_ms_Si.sym.nml2  input_ms_Si.verify.nml  input_ms_Si.verify.nml2  input_ms_Si_small.nml  input_ms_Si_small.nml2  input_sc.nml  input_sc.nml2  input_sc_Si.inp  input_sc_Si.nml  input_sc_Si.nml2  input_sc_Si.old  input_sc_Si.single.nml  input_sc_Si.single.nml2  input_sc_Si.verify.nml  input_sc_Si.verify.nml2  input_sc_SiO2.nml  input_sc_SiO2.nml2  input_sc_Si_small.nml  input_sc_Si_small.nml2  input_sc_diamond2.nml  input_sc_diamond2.nml2
ARTED/jobscript/: template_K.sh  template_KNL.sh  template_cpu.sh  template_fx100.sh  template_generic.sh  template_gpu.sh  template_native.sh  template_symmetric.sh
ARTED/modules/: CMakeLists.txt  backup_routines.f90  communication.f90  env_variables.f90  env_variables_internal.c  global_variables.f90  misc_routines.f90  nvtx.f90  opt_variables.f90  papi_wrap.c  performance_analyzer.f90  timelog.f90  timer.f90
ARTED/perfcheck/: CMakeLists.txt  main.c  stencil_perf_check.f90  wrap_variables.f90
ARTED/platform/: fujitsu-fx100.cmake  fujitsu-k.cmake  intel-avx.cmake  intel-avx2.cmake  intel-knc.cmake  intel-knl.cmake  pgi-cpu.cmake  pgi-openacc.cmake
ARTED/preparation/: CMakeLists.txt  fd_coef.f90  init.f90  init_wf.f90  input_ps.f90  prep_ps.f90
ARTED/script/: env_wrapper  select_GPU
ARTED/stencil/: CMakeLists.txt
GCEED/: CMakeLists.txt  OUT_IN_data.f90  WriteDensity.f90  aft_fourier.f90  allocate_mat.f90  allocate_psl.f90  allocate_sendrecv_groupob.f90  calcELF.f90  calcJxyz.f90  calcJxyz2nd.f90  calcVpsl.f90  calc_Mps3rd.f90  calc_dos.f90  calc_force_c.f90  calc_gradient_fast_c.f90  calc_iquotient.f90  calc_myob.f90  calc_occupation.f90  calc_pdos.f90  check_corrkob.f90  conv_p.f90  copyVlocal.f90  copy_density.f90  deallocate_mat.f90  dip.f90  gceed.f90  gradient.f90  gradient_ex.f90  gram_schmidt.f90  hartree.f90  hartree_boundary.f90  hpsi2.f90  hpsi_groupob.f90  init_sendrecv.f90  init_wf.f90  inner_product3.f90  inner_product4.f90  ippsi_ini.f90  laplacian2.f90  nabla.f90  (+27 more)
GCEED/common/: CMakeLists.txt  OUT_IN_data.f90  bisection.f90  calcELF.f90  calcJxyz.f90  calcJxyz2nd.f90  calcVpsl.f90  calc_Mps3rd.f90  calc_allob.f90  calc_force.f90  calc_force_c.f90  calc_gradient_fast.f90  calc_gradient_fast_c.f90  calc_iquotient.f90  calc_iroot.f90  calc_myob.f90  calc_ob_num.f90  calc_pmax.f90  calcuV.f90  check_cep.f90  check_corrkob.f90  check_mg.f90  check_ng.f90  check_numcpu.f90  conv_core_exc_cor.f90  conv_p.f90  conv_p0.f90  copyVlocal.f90  hartree.f90  hartree_boundary.f90  hartree_cg.f90  inner_product3.f90  inner_product4.f90  laplacianh.f90  nabla.f90  psl.f90  read_copy_pot.f90  sendrecv_copy.f90  set_gridcoo.f90  set_icoo1d.f90  (+15 more)
GCEED/misc/: CMakeLists.txt  setmg.f90  setng.f90
GCEED/modules/: CMakeLists.txt  allocate_mat.f90  allocate_sendrecv_groupob.f90  calc_density.f90  calc_invA_lapack.f90  change_order.f90  copyVlocal.f90  copy_psi_mesh.f90  deallocate_mat.f90  gradient.f90  gradient2.f90  hpsi2.f90  init_sendrecv.f90  inner_product.f90  laplacian2.f90  new_world.f90  read_pslfile.f90  readbox_rt.f90  rmmdiis_eigen_lapack.f90  scf_data.f90  sendrecv.f90  sendrecv_groupob.f90  sendrecv_groupob_ngp.f90  sendrecvh.f90  share_mesh_1d_old.f90  total_energy.f90  writebox_rt.f90
GCEED/rt/: CMakeLists.txt  WriteDensity.f90  add_polynomial.f90  aft_fourier.f90  calcEstatic.f90  calcVbox.f90  calc_env_trigon.f90  check_ae_shape.f90  dip.f90  gradient_ex.f90  hpsi2.f90  hpsi_groupob.f90  projection.f90  read_input_rt.f90  read_rt.f90  real_time_dft.f90  taylor.f90  taylor_coe.f90  time_evolution_step.f90  total_energy_groupob.f90  xc_fast.f90
GCEED/scf/: CMakeLists.txt  broyden.f90  calc_dos.f90  calc_occupation.f90  calc_pdos.f90  calc_rho_in.f90  deallocate_sendrecv_groupob.f90  eigen_subdiag_lapack.f90  eigen_subdiag_scalapack.f90  gram_schmidt.f90  prep_ini.f90  read_input_scf.f90  real_space_dft.f90  rmmdiis.f90  rmmdiis_eigen.f90  simple_mixing.f90  structure_opt.f90  subspace_diag.f90  ybcg.f90
main/: main.f90  (+3 more)
modules/: CMakeLists.txt  hpsi.f90  input.f90  inputoutput.f90  salmon_communication.f90  salmon_communication_dummy.f90  salmon_file.f90  salmon_global.f90  salmon_math.f90  salmon_parallel.f90
src/: CMakeLists.txt  main.f90  version.h.in  versionf.h.in
src/ARTED/: CMakeLists.txt  main.f90
src/FFTE/: alltoall_1d.f90  pzfft3dv_mod.f
src/GCEED/: CMakeLists.txt  gceed.f90  read_input_gceed.f90
src/atom/: CMakeLists.txt  input_pp.f90  prep_pp.f90  salmon_pp.f90
src/common/: CMakeLists.txt  broyden.f90  hpsi.f90  new_world.f90  scf_data.f90  stencil.f90  update_overlap.f90
src/core/: CMakeLists.txt  exc_cor.f90
src/ext/: CMakeLists.txt
src/gs/: CMakeLists.txt
src/io/: CMakeLists.txt  inputoutput.f90  salmon_file.f90  (+1 more)
testsuites/: CMakeLists.txt
(+470 files in other folders)
