set(TARGET_NAME   gceed)

set(SOURCES
    gceed.f90
    common/calc_ob_num.f90
    common/ylm.f90
    modules/scf_data.f90
    common/setcN.f90
    rt/calcVbox.f90
    common/set_gridcoo.f90
    modules/read_pslfile.f90
    common/setbN.f90
    common/copyVlocal.f90
    scf/subdgemm_${FILE_MATHLIB}.f90
    modules/allocate_psl.f90
    common/calcVpsl.f90
    scf/prep_ini.f90
    common/psl.f90
    scf/simple_mixing.f90
    modules/rmmdiis_eigen_${FILE_MATHLIB}.f90
    common/storevpp.f90
    common/calc_Mps3rd.f90
    modules/allocate_sendrecv_groupob.f90
    common/setng.f90
    rt/gradient_ex.f90
    common/calcJxyz2nd.f90
    scf/deallocate_sendrecv_groupob.f90
    scf/structure_opt.f90
    common/calcuV.f90
    scf/calc_occupation.f90
    read_input_gceed.f90
    scf/calc_rho_in.f90
    modules/new_world.f90
    modules/calc_invA_${FILE_MATHLIB}.f90
    common/calc_iroot.f90
    common/set_ispin.f90
    modules/change_order.f90
    modules/writebox_rt.f90
    common/inner_product4.f90
    scf/calc_dos.f90
    common/conv_p.f90
    modules/allocate_mat.f90
    rt/dip.f90
    common/calc_force.f90
    modules/deallocate_mat.f90
    scf/gram_schmidt.f90
    common/calc_force_c.f90
    rt/taylor.f90
    rt/WriteDensity.f90
    common/writepsi.f90
    common/inner_product3.f90
    common/conv_p0.f90
    modules/readbox_rt.f90
    rt/read_rt.f90
    common/calc_allob.f90
    common/OUT_IN_data.f90
    scf/eigen_subdiag_${FILE_MATHLIB}.f90
    rt/time_evolution_step.f90
    common/read_copy_pot.f90
    scf/copy_density.f90
    common/hartree.f90
    rt/projection.f90
    common/init_wf.f90
    common/check_numcpu.f90
    rt/taylor_coe.f90
    modules/sendrecv_groupob_ngp.f90
    common/setlg.f90
    modules/init_sendrecv.f90
    common/nabla.f90
    common/calc_pmax.f90
    scf/sendrecv_copy.f90
    common/laplacianh.f90
    rt/read_input_rt.f90
    common/check_corrkob.f90
    common/calcJxyz.f90
    common/calc_iquotient.f90
    modules/sendrecv.f90
    modules/gradient2.f90
    modules/gradient.f90
    modules/share_mesh_1d_old.f90
    modules/sendrecvh.f90
    common/hartree_boundary.f90
    common/hartree_cg.f90
    rt/xc_fast.f90
    rt/calcEstatic.f90
    common/set_isstaend.f90
    common/conv_core_exc_cor.f90
    common/bisection.f90
    scf/calc_pdos.f90
    modules/calc_density.f90
    modules/laplacian2.f90
    modules/hpsi2.f90
    common/xc.f90
    modules/copy_psi_mesh.f90
    common/setmg.f90
    modules/inner_product.f90
    modules/total_energy.f90
    rt/real_time_dft.f90
    scf/real_space_dft.f90
    scf/rmmdiis_eigen.f90
    scf/subspace_diag.f90
    common/calc_myob.f90
    scf/ybcg.f90
    scf/rmmdiis.f90
    rt/add_polynomial.f90
    rt/total_energy_groupob.f90
    modules/sendrecv_groupob.f90
    rt/hpsi_groupob.f90
    common/calc_gradient_fast.f90
    common/calcELF.f90
    scf/read_input_scf.f90
    common/calc_gradient_fast_c.f90
)

add_library(${TARGET_NAME} STATIC ${SOURCES})
list(APPEND SALMON_LINK_LIBRARIES ${TARGET_NAME})
set(SALMON_LINK_LIBRARIES ${SALMON_LINK_LIBRARIES} PARENT_SCOPE)
